--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -17,7 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base = \"https://raw.githubusercontent.com/vaastav/Fantasy-Premier-League/master/data/\"\n",
+    "season = \"2023-24\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -222,49 +232,248 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gameweek = 1\n",
-    "season = \"2023-24\"\n",
-    "base = \"https://raw.githubusercontent.com/vaastav/Fantasy-Premier-League/master/data/\"\n",
-    "url = base + season + \"/gws/gw\" + str(gameweek) + \".csv\"\n",
-    "\n",
-    "df1 = pd.read_csv(url)\n",
-    "df1.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['name', 'position', 'team', 'xP', 'assists', 'bonus', 'bps',\n",
-       "       'clean_sheets', 'creativity', 'element', 'expected_assists',\n",
-       "       'expected_goal_involvements', 'expected_goals',\n",
-       "       'expected_goals_conceded', 'fixture', 'goals_conceded', 'goals_scored',\n",
-       "       'ict_index', 'influence', 'kickoff_time', 'minutes', 'opponent_team',\n",
-       "       'own_goals', 'penalties_missed', 'penalties_saved', 'red_cards',\n",
-       "       'round', 'saves', 'selected', 'starts', 'team_a_score', 'team_h_score',\n",
-       "       'threat', 'total_points', 'transfers_balance', 'transfers_in',\n",
-       "       'transfers_out', 'value', 'was_home', 'yellow_cards'],\n",
-       "      dtype='object')"
-      ]
-     },
      "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.columns"
+    "gameweek = 1\n",
+    "url = base + season + \"/gws/gw\" + str(gameweek) + \".csv\"\n",
+    "df1 = pd.read_csv(url)\n",
+    "df1.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>position</th>\n",
+       "      <th>team</th>\n",
+       "      <th>xP</th>\n",
+       "      <th>assists</th>\n",
+       "      <th>bonus</th>\n",
+       "      <th>bps</th>\n",
+       "      <th>clean_sheets</th>\n",
+       "      <th>creativity</th>\n",
+       "      <th>element</th>\n",
+       "      <th>...</th>\n",
+       "      <th>team_a_score</th>\n",
+       "      <th>team_h_score</th>\n",
+       "      <th>threat</th>\n",
+       "      <th>total_points</th>\n",
+       "      <th>transfers_balance</th>\n",
+       "      <th>transfers_in</th>\n",
+       "      <th>transfers_out</th>\n",
+       "      <th>value</th>\n",
+       "      <th>was_home</th>\n",
+       "      <th>yellow_cards</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Femi Seriki</td>\n",
+       "      <td>DEF</td>\n",
+       "      <td>Sheffield Utd</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>653</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>708</td>\n",
+       "      <td>833</td>\n",
+       "      <td>125</td>\n",
+       "      <td>40</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Radek Vítek</td>\n",
+       "      <td>GK</td>\n",
+       "      <td>Man Utd</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>669</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jack Hinshelwood</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>Brighton</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>621</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-44</td>\n",
+       "      <td>127</td>\n",
+       "      <td>171</td>\n",
+       "      <td>45</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jadon Sancho</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>Man Utd</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>397</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-10687</td>\n",
+       "      <td>2309</td>\n",
+       "      <td>12996</td>\n",
+       "      <td>70</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rhys Norrington-Davies</td>\n",
+       "      <td>DEF</td>\n",
+       "      <td>Sheffield Utd</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>487</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-795</td>\n",
+       "      <td>168</td>\n",
+       "      <td>963</td>\n",
+       "      <td>40</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 40 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     name position           team   xP  assists  bonus  bps  \\\n",
+       "0             Femi Seriki      DEF  Sheffield Utd -0.5        0      0    0   \n",
+       "1             Radek Vítek       GK        Man Utd  1.5        0      0    0   \n",
+       "2        Jack Hinshelwood      MID       Brighton  0.0        0      0    0   \n",
+       "3            Jadon Sancho      MID        Man Utd  1.5        0      0    7   \n",
+       "4  Rhys Norrington-Davies      DEF  Sheffield Utd  0.0        0      0    0   \n",
+       "\n",
+       "   clean_sheets  creativity  element  ...  team_a_score  team_h_score  threat  \\\n",
+       "0             0         0.0      653  ...             1             2     0.0   \n",
+       "1             0         0.0      669  ...             0             2     0.0   \n",
+       "2             0         0.0      621  ...             4             1     0.0   \n",
+       "3             0         1.9      397  ...             0             2     0.0   \n",
+       "4             0         0.0      487  ...             1             2     0.0   \n",
+       "\n",
+       "   total_points  transfers_balance  transfers_in  transfers_out  value  \\\n",
+       "0             0                708           833            125     40   \n",
+       "1             0                  0             0              0     40   \n",
+       "2             0                -44           127            171     45   \n",
+       "3             1             -10687          2309          12996     70   \n",
+       "4             0               -795           168            963     40   \n",
+       "\n",
+       "   was_home yellow_cards  \n",
+       "0     False            0  \n",
+       "1     False            0  \n",
+       "2     False            0  \n",
+       "3     False            0  \n",
+       "4     False            0  \n",
+       "\n",
+       "[5 rows x 40 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gameweek = 2\n",
+    "url = base + season + \"/gws/gw\" + str(gameweek) + \".csv\"\n",
+    "df2 = pd.read_csv(url)\n",
+    "df2.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
