--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -211,6 +211,138 @@
     "df = pd.read_csv(url)\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(278, 2)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DEF = df[['total_points', 'now_cost']][df.element_type == \"DEF\"]\n",
+    "DEF.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(374, 2)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MID = df[['total_points', 'now_cost']][df.element_type == \"MID\"]\n",
+    "MID.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(113, 2)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FWD = df[['total_points', 'now_cost']][df.element_type == \"FWD\"]\n",
+    "FWD.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 2)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GK = df[['total_points', 'now_cost']][df.element_type == \"GK\"]\n",
+    "GK.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coinchange2(coins,amount):\n",
+    "    if amount == 0:\n",
+    "        return 0\n",
+    "    if len(coins) == 1:\n",
+    "            if coins[0] == amount:\n",
+    "                return 1\n",
+    "            if amount%coins[0] == 0:\n",
+    "                return amount//coins[0]\n",
+    "            else:\n",
+    "                return float('inf')\n",
+    "    \n",
+    "    dp = [0]*(amount+1)\n",
+    "    for i in range(1,amount+1):\n",
+    "        min_ = float('inf')\n",
+    "        for coin in coins:\n",
+    "            if coin <= i and i-coin>=0:\n",
+    "                min_ = min(1+dp[i-coin],min_)\n",
+    "\n",
+    "        dp[i] = min_\n",
+    "\n",
+    "    return dp[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def playerchoice(players, points, cost, budget, slots):\n",
+    "    players = list()\n",
+    "\n",
+    "    if budget == 0:\n",
+    "        return 0\n",
+    "    \n",
+    "    if len(points) == 1:\n",
+    "        if cost[0] <= budget and slots == 1:\n",
+    "            return (points[0], players.append(players[0]))\n",
+    "        if cost[0] > budget:\n",
+    "            return ()"
+   ]
   }
  ],
  "metadata": {
