Define FPL team choice constraints

--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Team Choice Algorithm\n"
+    "# Team Choice Algorithm\n",
+    "In this notebook, we are going to build an algorithm that selects the optimal team (i.e. highest points with the 100M budget) based on already predicted points from our internal and/or external Machine Learning models. This will be a zero-one knapsack algorithm that has to fulfil the following constraints:\n",
+    "- Choose **15 players** where ***2 are goalkeepers***, ***5 are defenders***, ***5 are midfielders***, and ***3 are strikers***\n",
+    "- Your 15-player choice should **NOT include** more than 3 players from the same team\n",
+    "- Maximise the points for **11 players eligible to play** per gameweek where ***1 is a goalkeeper***, ***3-5 are defenders***, ***3-5 are midfielders***, and ***1-3 are strikers***\n",
+    "- Note players on the bench will be included if one eligible player is injured/does not play in a gameweek\n",
+    "- You can make one transfer every gameweek and this can be carried forward but never exceeds 2 free transfers. All additional transfers cost 4 points on your gameweek score"
    ]
   },
   {
