Predictions Data Tabulations

--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -21,6 +21,403 @@
    "source": [
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>14_pts</th>\n",
+       "      <th>15_pts</th>\n",
+       "      <th>16_pts</th>\n",
+       "      <th>17_pts</th>\n",
+       "      <th>18_pts</th>\n",
+       "      <th>19_pts</th>\n",
+       "      <th>20_pts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Fábio Vieira</td>\n",
+       "      <td>ARS</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>G.Jesus</td>\n",
+       "      <td>ARS</td>\n",
+       "      <td>FWD</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>1.81006</td>\n",
+       "      <td>1.69101</td>\n",
+       "      <td>1.99226</td>\n",
+       "      <td>1.71490</td>\n",
+       "      <td>1.87430</td>\n",
+       "      <td>1.66682</td>\n",
+       "      <td>1.62687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Gabriel</td>\n",
+       "      <td>ARS</td>\n",
+       "      <td>DEF</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>1.80719</td>\n",
+       "      <td>2.60986</td>\n",
+       "      <td>2.58463</td>\n",
+       "      <td>2.90901</td>\n",
+       "      <td>2.66428</td>\n",
+       "      <td>3.11601</td>\n",
+       "      <td>2.87315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Havertz</td>\n",
+       "      <td>ARS</td>\n",
+       "      <td>FWD</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>2.46165</td>\n",
+       "      <td>2.24302</td>\n",
+       "      <td>2.59427</td>\n",
+       "      <td>2.24465</td>\n",
+       "      <td>2.51543</td>\n",
+       "      <td>2.22071</td>\n",
+       "      <td>2.17817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Hein</td>\n",
+       "      <td>ARS</td>\n",
+       "      <td>GK</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID          Name Team  Pos  Price   14_pts   15_pts   16_pts   17_pts  \\\n",
+       "0   1  Fábio Vieira  ARS  MID    5.4  0.00000  0.00000  0.00000  0.00000   \n",
+       "1   2       G.Jesus  ARS  FWD    6.8  1.81006  1.69101  1.99226  1.71490   \n",
+       "2   3       Gabriel  ARS  DEF    6.2  1.80719  2.60986  2.58463  2.90901   \n",
+       "3   4       Havertz  ARS  FWD    7.9  2.46165  2.24302  2.59427  2.24465   \n",
+       "4   5          Hein  ARS   GK    4.0  0.00000  0.00000  0.00000  0.00000   \n",
+       "\n",
+       "    18_pts   19_pts   20_pts  \n",
+       "0  0.00000  0.00000  0.00000  \n",
+       "1  1.87430  1.66682  1.62687  \n",
+       "2  2.66428  3.11601  2.87315  \n",
+       "3  2.51543  2.22071  2.17817  \n",
+       "4  0.00000  0.00000  0.00000  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = pd.read_csv(\"predictedpoints.csv\")\n",
+    "predictions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>14_pts</th>\n",
+       "      <th>15_pts</th>\n",
+       "      <th>16_pts</th>\n",
+       "      <th>17_pts</th>\n",
+       "      <th>18_pts</th>\n",
+       "      <th>19_pts</th>\n",
+       "      <th>20_pts</th>\n",
+       "      <th>total_pts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Saka</td>\n",
+       "      <td>ARS</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>4.80651</td>\n",
+       "      <td>4.52891</td>\n",
+       "      <td>5.52161</td>\n",
+       "      <td>4.49806</td>\n",
+       "      <td>5.98499</td>\n",
+       "      <td>4.95165</td>\n",
+       "      <td>4.56745</td>\n",
+       "      <td>25.34008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>327</th>\n",
+       "      <td>328</td>\n",
+       "      <td>M.Salah</td>\n",
+       "      <td>LIV</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>13.1</td>\n",
+       "      <td>4.27397</td>\n",
+       "      <td>4.45441</td>\n",
+       "      <td>5.10245</td>\n",
+       "      <td>4.80723</td>\n",
+       "      <td>6.26130</td>\n",
+       "      <td>5.40262</td>\n",
+       "      <td>4.93968</td>\n",
+       "      <td>24.89936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>350</th>\n",
+       "      <td>351</td>\n",
+       "      <td>Haaland</td>\n",
+       "      <td>MCI</td>\n",
+       "      <td>FWD</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5.39160</td>\n",
+       "      <td>4.30897</td>\n",
+       "      <td>5.01468</td>\n",
+       "      <td>4.02910</td>\n",
+       "      <td>5.47427</td>\n",
+       "      <td>4.66883</td>\n",
+       "      <td>5.36691</td>\n",
+       "      <td>24.21862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>182</td>\n",
+       "      <td>Palmer</td>\n",
+       "      <td>CHE</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>10.9</td>\n",
+       "      <td>4.80068</td>\n",
+       "      <td>4.11907</td>\n",
+       "      <td>5.64511</td>\n",
+       "      <td>3.95679</td>\n",
+       "      <td>5.41424</td>\n",
+       "      <td>4.41886</td>\n",
+       "      <td>4.16081</td>\n",
+       "      <td>23.93589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>71</td>\n",
+       "      <td>Kluivert</td>\n",
+       "      <td>BOU</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>3.17198</td>\n",
+       "      <td>4.12228</td>\n",
+       "      <td>4.39103</td>\n",
+       "      <td>4.70272</td>\n",
+       "      <td>4.48612</td>\n",
+       "      <td>4.75275</td>\n",
+       "      <td>4.44103</td>\n",
+       "      <td>20.87413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>91</td>\n",
+       "      <td>Flekken</td>\n",
+       "      <td>BRE</td>\n",
+       "      <td>GK</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.60764</td>\n",
+       "      <td>3.83872</td>\n",
+       "      <td>4.57254</td>\n",
+       "      <td>3.41256</td>\n",
+       "      <td>4.38842</td>\n",
+       "      <td>3.52040</td>\n",
+       "      <td>4.81181</td>\n",
+       "      <td>20.81988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>248</td>\n",
+       "      <td>Leno</td>\n",
+       "      <td>FUL</td>\n",
+       "      <td>GK</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.79962</td>\n",
+       "      <td>3.75632</td>\n",
+       "      <td>5.16383</td>\n",
+       "      <td>3.39394</td>\n",
+       "      <td>4.44575</td>\n",
+       "      <td>3.75893</td>\n",
+       "      <td>3.28876</td>\n",
+       "      <td>20.55946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>185</td>\n",
+       "      <td>Sánchez</td>\n",
+       "      <td>CHE</td>\n",
+       "      <td>GK</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>4.86003</td>\n",
+       "      <td>4.70652</td>\n",
+       "      <td>3.13940</td>\n",
+       "      <td>4.22377</td>\n",
+       "      <td>3.28757</td>\n",
+       "      <td>3.72189</td>\n",
+       "      <td>4.23728</td>\n",
+       "      <td>20.21729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>382</th>\n",
+       "      <td>383</td>\n",
+       "      <td>Onana</td>\n",
+       "      <td>MUN</td>\n",
+       "      <td>GK</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>4.70914</td>\n",
+       "      <td>3.19871</td>\n",
+       "      <td>4.70818</td>\n",
+       "      <td>3.31598</td>\n",
+       "      <td>3.87590</td>\n",
+       "      <td>3.62487</td>\n",
+       "      <td>5.09267</td>\n",
+       "      <td>19.80791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>502</th>\n",
+       "      <td>503</td>\n",
+       "      <td>Son</td>\n",
+       "      <td>TOT</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>3.54874</td>\n",
+       "      <td>4.26477</td>\n",
+       "      <td>4.17073</td>\n",
+       "      <td>3.87757</td>\n",
+       "      <td>3.59901</td>\n",
+       "      <td>4.85341</td>\n",
+       "      <td>4.46099</td>\n",
+       "      <td>19.46082</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID      Name Team  Pos  Price   14_pts   15_pts   16_pts   17_pts  \\\n",
+       "16    17      Saka  ARS  MID   10.3  4.80651  4.52891  5.52161  4.49806   \n",
+       "327  328   M.Salah  LIV  MID   13.1  4.27397  4.45441  5.10245  4.80723   \n",
+       "350  351   Haaland  MCI  FWD   15.0  5.39160  4.30897  5.01468  4.02910   \n",
+       "181  182    Palmer  CHE  MID   10.9  4.80068  4.11907  5.64511  3.95679   \n",
+       "70    71  Kluivert  BOU  MID    5.3  3.17198  4.12228  4.39103  4.70272   \n",
+       "90    91   Flekken  BRE   GK    4.5  4.60764  3.83872  4.57254  3.41256   \n",
+       "247  248      Leno  FUL   GK    5.0  3.79962  3.75632  5.16383  3.39394   \n",
+       "184  185   Sánchez  CHE   GK    4.7  4.86003  4.70652  3.13940  4.22377   \n",
+       "382  383     Onana  MUN   GK    5.2  4.70914  3.19871  4.70818  3.31598   \n",
+       "502  503       Son  TOT  MID    9.9  3.54874  4.26477  4.17073  3.87757   \n",
+       "\n",
+       "      18_pts   19_pts   20_pts  total_pts  \n",
+       "16   5.98499  4.95165  4.56745   25.34008  \n",
+       "327  6.26130  5.40262  4.93968   24.89936  \n",
+       "350  5.47427  4.66883  5.36691   24.21862  \n",
+       "181  5.41424  4.41886  4.16081   23.93589  \n",
+       "70   4.48612  4.75275  4.44103   20.87413  \n",
+       "90   4.38842  3.52040  4.81181   20.81988  \n",
+       "247  4.44575  3.75893  3.28876   20.55946  \n",
+       "184  3.28757  3.72189  4.23728   20.21729  \n",
+       "382  3.87590  3.62487  5.09267   19.80791  \n",
+       "502  3.59901  4.85341  4.46099   19.46082  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_gw = 14 #Enter the starting gameweek for your team selection\n",
+    "gw_count = 5 #Up to how many gameweeks in the future would you like to consider\n",
+    "\n",
+    "## Compute the total expected points for the next gw_count weeks  the starting gameweek\n",
+    "predictions['total_pts'] = predictions[str(start_gw) + '_pts']\n",
+    "for gw in range(start_gw+1,start_gw+gw_count):\n",
+    "    predictions['total_pts'] += predictions[str(gw) + '_pts']\n",
+    "\n",
+    "predictions = predictions.sort_values(by='total_pts',ascending=False) #Sort by total predicted points\n",
+    "predictions = predictions[predictions.total_pts != 0] #Drop all players with 0 expected points\n",
+    "predictions.head(10)"
+   ]
   }
  ],
  "metadata": {
