--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -424,14 +424,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 78,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Zero-One Knapsack Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Determining budget per player type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22.0, 53.6, 248)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def generatebudget(position,df,price_cname='Price',position_cname='Pos'):\n",
     "    n_players = {'GK':2,'DEF':5,'MID':5,'FWD':3} ##player count required in team\n",
-    "    prices = predictions[price_cname][predictions[position_cname]==position].sort_values()\n",
+    "    prices = df[price_cname][df[position_cname]==position].sort_values()\n",
     "    \n",
     "    min_budget = 0\n",
     "    for i in range(n_players[position]):\n",
@@ -441,27 +466,73 @@
     "    for i in range((-1*n_players[position]),0):\n",
     "        max_budget += prices.iloc[i]\n",
     "\n",
-    "    return min_budget, max_budget, prices.shape[0] #minimum budget, maximum budget, number of players"
+    "    return min_budget, max_budget, prices.shape[0] #minimum budget, maximum budget, number of players\n",
+    "\n",
+    "\n",
+    "generatebudget(df=predictions, position = 'MID')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache = dict()\n",
+    "def chooseplayers(df,position,budget,chosen=0,price_cname='Price',position_cname='Pos',pts_cname='total_pts', id_cname='ID'):\n",
+    "    n_players = {'GK':2,'DEF':5,'MID':5,'FWD':3} ##player count required in team\n",
+    "    players = df[id_cname,price_cname,pts_cname][df[position_cname]==position]\n",
+    "    \n",
+    "    if chosen >= n_players[position]:\n",
+    "        return 0\n",
+    "    if players.shape[0] == 1:\n",
+    "        if players"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(22.0, 53.6, 248)"
+       "23"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "generatebudget(df=predictions, position = 'MID')"
+    "cache = dict() ## (budget, prices): whatever the knapsack computes\n",
+    "def knapsack(budget, ids, prices, points):\n",
+    "    ##Base Cases\n",
+    "    if len(ids) == 0:\n",
+    "        return 0\n",
+    "    if len(ids) == 1:\n",
+    "        if prices[0] > budget:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return points[0]\n",
+    "\n",
+    "    ## retrieve from precomputed responses\n",
+    "    if (budget,tuple(ids)) in cache.keys():\n",
+    "        return cache[(budget,tuple(ids))]\n",
+    "\n",
+    "    ### Repetitive Subproblem\n",
+    "    if prices[-1] > budget:\n",
+    "        cache[(budget,tuple(ids))] = knapsack(budget, ids[:-1], prices[:-1],points[:-1])\n",
+    "        return cache[(budget,tuple(ids))]\n",
+    "    else:\n",
+    "        a = knapsack(budget, ids[:-1],prices[:-1],points[:-1])  #ignore the last item\n",
+    "        b = points[-1] + knapsack(budget-prices[-1],ids[:-1],prices[:-1],points[:-1]) #include the last item\n",
+    "        cache[(budget,tuple(ids))] = max(a,b)\n",
+    "        return cache[(budget,tuple(ids))]\n",
+    "    \n",
+    "\n",
+    "knapsack(18,[0,1,2,3],[1,3,5,7],[2,4,7,10])"
    ]
   }
  ],
