--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -491,16 +491,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "23"
+       "(12, [0, 3])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,12 +510,12 @@
     "def knapsack(budget, ids, prices, points):\n",
     "    ##Base Cases\n",
     "    if len(ids) == 0:\n",
-    "        return 0\n",
+    "        return (0,[])\n",
     "    if len(ids) == 1:\n",
     "        if prices[0] > budget:\n",
-    "            return 0\n",
+    "            return (0,[])\n",
     "        else:\n",
-    "            return points[0]\n",
+    "            return (points[0],[ids[0]])\n",
     "\n",
     "    ## retrieve from precomputed responses\n",
     "    if (budget,tuple(ids)) in cache.keys():\n",
@@ -527,12 +527,34 @@
     "        return cache[(budget,tuple(ids))]\n",
     "    else:\n",
     "        a = knapsack(budget, ids[:-1],prices[:-1],points[:-1])  #ignore the last item\n",
-    "        b = points[-1] + knapsack(budget-prices[-1],ids[:-1],prices[:-1],points[:-1]) #include the last item\n",
-    "        cache[(budget,tuple(ids))] = max(a,b)\n",
+    "        b = knapsack(budget-prices[-1],ids[:-1],prices[:-1],points[:-1]) #include the last item\n",
+    "        \n",
+    "        if a[0] >= b[0]+points[-1]:\n",
+    "            cache[(budget,tuple(ids))] = a\n",
+    "        else:\n",
+    "            cache[(budget,tuple(ids))] = (b[0]+points[-1],b[1]+[ids[-1]])\n",
+    "            \n",
     "        return cache[(budget,tuple(ids))]\n",
     "    \n",
     "\n",
-    "knapsack(18,[0,1,2,3],[1,3,5,7],[2,4,7,10])"
+    "knapsack(8,[0,1,2,3],[1,3,5,7],[2,4,7,10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([0,1,2,3]+[1])"
    ]
   }
  ],
