Add player choice number constraint

--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -500,44 +500,46 @@
        "(12, [0, 3])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cache = dict() ## (budget, prices): whatever the knapsack computes\n",
-    "def knapsack(budget, ids, prices, points):\n",
+    "def knapsack(budget, ids, prices, points, choices):\n",
     "    ##Base Cases\n",
-    "    if len(ids) == 0:\n",
+    "    if choices == 0:\n",
     "        return (0,[])\n",
-    "    if len(ids) == 1:\n",
-    "        if prices[0] > budget:\n",
-    "            return (0,[])\n",
-    "        else:\n",
-    "            return (points[0],[ids[0]])\n",
+    "    if choices == 1:\n",
+    "        if len(ids) == 0:\n",
+    "            return (float('-inf'),[])\n",
+    "        if len(ids) == 1:\n",
+    "            return (float('-inf'),[]) if prices[0] > budget else (points[0],[ids[0]])\n",
+    "    if choices > 1 and len(ids) <= 1:\n",
+    "        return (float('-inf'),[])\n",
     "\n",
-    "    ## retrieve from precomputed responses\n",
-    "    if (budget,tuple(ids)) in cache.keys():\n",
-    "        return cache[(budget,tuple(ids))]\n",
+    "    ## Retrieve from precomputed responses\n",
+    "    if (budget,tuple(ids),choices) in cache.keys():\n",
+    "        return cache[(budget,tuple(ids),choices)]\n",
     "\n",
     "    ### Repetitive Subproblem\n",
     "    if prices[-1] > budget:\n",
-    "        cache[(budget,tuple(ids))] = knapsack(budget, ids[:-1], prices[:-1],points[:-1])\n",
-    "        return cache[(budget,tuple(ids))]\n",
+    "        cache[(budget,tuple(ids),choices)] = knapsack(budget, ids[:-1], prices[:-1],points[:-1],choices)\n",
+    "        return cache[(budget,tuple(ids),choices)]\n",
     "    else:\n",
-    "        a = knapsack(budget, ids[:-1],prices[:-1],points[:-1])  #ignore the last item\n",
-    "        b = knapsack(budget-prices[-1],ids[:-1],prices[:-1],points[:-1]) #include the last item\n",
+    "        a = knapsack(budget, ids[:-1],prices[:-1],points[:-1],choices)  #ignore the last item\n",
+    "        b = knapsack(budget-prices[-1],ids[:-1],prices[:-1],points[:-1],choices-1) #include the last item\n",
     "        \n",
     "        if a[0] >= b[0]+points[-1]:\n",
-    "            cache[(budget,tuple(ids))] = a\n",
+    "            cache[(budget,tuple(ids),choices)] = a\n",
     "        else:\n",
-    "            cache[(budget,tuple(ids))] = (b[0]+points[-1],b[1]+[ids[-1]])\n",
+    "            cache[(budget,tuple(ids),choices)] = (b[0]+points[-1],b[1]+[ids[-1]])\n",
     "            \n",
-    "        return cache[(budget,tuple(ids))]\n",
+    "        return cache[(budget,tuple(ids),choices)]\n",
     "    \n",
     "\n",
-    "knapsack(8,[0,1,2,3],[1,3,5,7],[2,4,7,10])"
+    "knapsack(budget=8,ids=[0,1,2,3],prices=[1,3,5,7],points=[2,4,7,10],choices=2)"
    ]
   },
   {
