Choose players algorithm
return the chosen players and expected returns across all possible budget points for a position

--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -15,10 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +176,7 @@
        "4  0.00000  0.00000  0.00000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +342,7 @@
        "686  0.49764  0.46681  0.48561    2.36600       0.525778  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -439,54 +440,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(22.0, 53.6, 248)"
+       "(22.0, 53.6, 5)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def generatebudget(position,df,price_cname='Price',position_cname='Pos'):\n",
+    "def generatebudget(df,position,price_cname='Price',position_cname='Pos'):\n",
     "    n_players = {'GK':2,'DEF':5,'MID':5,'FWD':3} ##player count required in team\n",
+    "    target = n_players[position]\n",
+    "\n",
     "    prices = df[price_cname][df[position_cname]==position].sort_values()\n",
-    "    \n",
+    "\n",
     "    min_budget = 0\n",
-    "    for i in range(n_players[position]):\n",
+    "    for i in range(target):\n",
     "        min_budget += prices.iloc[i]\n",
     "\n",
     "    max_budget = 0\n",
-    "    for i in range((-1*n_players[position]),0):\n",
+    "    for i in range((-1*target),0):\n",
     "        max_budget += prices.iloc[i]\n",
     "\n",
-    "    return min_budget, max_budget, prices.shape[0] #minimum budget, maximum budget, number of players\n",
+    "    return min_budget, max_budget, target #minimum budget, maximum budget, target number of players\n",
     "\n",
     "\n",
     "generatebudget(df=predictions, position = 'MID')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cache = dict()\n",
-    "def chooseplayers(df,position,budget,chosen=0,price_cname='Price',position_cname='Pos',pts_cname='total_pts', id_cname='ID'):\n",
-    "    n_players = {'GK':2,'DEF':5,'MID':5,'FWD':3} ##player count required in team\n",
-    "    players = df[id_cname,price_cname,pts_cname][df[position_cname]==position]\n",
-    "    \n",
-    "    if chosen >= n_players[position]:\n",
-    "        return 0\n",
-    "    if players.shape[0] == 1:\n",
-    "        if players"
+    "### 0-1 Knapsack (Maximising points return for a set positional budget)"
    ]
   },
   {
@@ -543,20 +536,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 87,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 1]\n"
-     ]
-    }
-   ],
    "source": [
-    "print([0,1,2,3]+[1])"
+    "### Determining the returns for every budget across a budget range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chooseplayers(df, position, price_cname='Price', position_cname='Pos', pts_cname='total_pts', id_cname='ID'):\n",
+    "    min_,max_,target = generatebudget(predictions, position)\n",
+    "    budgets = list(np.arange(min_,max_+0.1,0.1))\n",
+    "\n",
+    "    players = df[[id_cname,price_cname,pts_cname]][df[position_cname]==position]\n",
+    "    returns = list() ## 2D array with every row as budget,return,players\n",
+    "\n",
+    "    for budget in budgets:\n",
+    "        budget = round(budget,1)\n",
+    "        budget_return,players_chosen = knapsack(budget, ids=list(players[id_cname]), prices=list(players[price_cname]), points=list(players[pts_cname]), choices=target)\n",
+    "        returns.append([budget,budget_return,players_chosen])\n",
+    "\n",
+    "    return returns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "returns = chooseplayers(df=predictions,position='MID')"
    ]
   }
  ],
