Condensed Returns Dataframe

--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -564,12 +564,287 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Minimising Returns Data per Player Type (If return is equal, focus on the cheapest)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>points</th>\n",
+       "      <th>price</th>\n",
+       "      <th>players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.22063</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>[624, 668]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.85692</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>[521, 668]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11.97723</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>[521, 624]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20.18110</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>[488, 624]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>29.81739</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>[488, 521]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     points  price     players\n",
+       "0   1.22063    7.9  [624, 668]\n",
+       "1  10.85692    8.0  [521, 668]\n",
+       "2  11.97723    8.1  [521, 624]\n",
+       "3  20.18110    8.3  [488, 624]\n",
+       "4  29.81739    8.4  [488, 521]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "goalkeepers = pd.DataFrame(chooseplayers(df=predictions,position='GK'),columns=['price','points','players'])\n",
+    "goalkeepers = goalkeepers.groupby(by='points').min()\n",
+    "goalkeepers = goalkeepers.reset_index()\n",
+    "goalkeepers = goalkeepers[goalkeepers.points != float('-inf')]\n",
+    "goalkeepers.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "returns = chooseplayers(df=predictions,position='MID')"
+    "defenders = pd.DataFrame(chooseplayers(df=predictions,position='DEF'),columns=['price','points','players'])\n",
+    "defenders = defenders.groupby(by='points').min()\n",
+    "defenders = defenders.reset_index()\n",
+    "defenders = defenders[defenders.points != float('-inf')]\n",
+    "defenders.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>points</th>\n",
+       "      <th>price</th>\n",
+       "      <th>players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.82408</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>[111, 137, 285, 428, 481]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>25.79296</td>\n",
+       "      <td>22.1</td>\n",
+       "      <td>[111, 137, 285, 481, 619]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>36.17637</td>\n",
+       "      <td>22.3</td>\n",
+       "      <td>[111, 174, 285, 309, 619]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>38.62645</td>\n",
+       "      <td>22.5</td>\n",
+       "      <td>[111, 174, 285, 410, 619]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>42.16404</td>\n",
+       "      <td>22.6</td>\n",
+       "      <td>[111, 168, 174, 285, 619]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     points  price                    players\n",
+       "0  18.82408   22.0  [111, 137, 285, 428, 481]\n",
+       "1  25.79296   22.1  [111, 137, 285, 481, 619]\n",
+       "2  36.17637   22.3  [111, 174, 285, 309, 619]\n",
+       "3  38.62645   22.5  [111, 174, 285, 410, 619]\n",
+       "4  42.16404   22.6  [111, 168, 174, 285, 619]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "midfielders = pd.DataFrame(chooseplayers(df=predictions,position='MID'),columns=['price','points','players'])\n",
+    "midfielders = midfielders.groupby(by='points').min()\n",
+    "midfielders = midfielders.reset_index()\n",
+    "midfielders = midfielders[midfielders.points != float('-inf')]\n",
+    "midfielders.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>points</th>\n",
+       "      <th>price</th>\n",
+       "      <th>players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.14059</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>[648, 665, 676]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.05884</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>[289, 665, 676]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10.85942</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>[27, 665, 676]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>17.76899</td>\n",
+       "      <td>14.3</td>\n",
+       "      <td>[27, 289, 676]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18.93582</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>[27, 453, 676]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     points  price          players\n",
+       "0   1.14059   13.5  [648, 665, 676]\n",
+       "1   8.05884   13.8  [289, 665, 676]\n",
+       "2  10.85942   14.0   [27, 665, 676]\n",
+       "3  17.76899   14.3   [27, 289, 676]\n",
+       "4  18.93582   14.6   [27, 453, 676]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fowards = pd.DataFrame(chooseplayers(df=predictions,position='FWD'),columns=['price','points','players'])\n",
+    "fowards = fowards.groupby(by='points').min()\n",
+    "fowards = fowards.reset_index()\n",
+    "fowards = fowards[fowards.points != float('-inf')]\n",
+    "fowards.head()"
    ]
   }
  ],
