Final Knapsack Algorithm (Repetitive subproblem)

--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -834,17 +834,80 @@
        "4  18.93582   14.6   [27, 453, 676]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fowards = pd.DataFrame(chooseplayers(df=predictions,position='FWD'),columns=['price','points','players'])\n",
-    "fowards = fowards.groupby(by='points').min()\n",
-    "fowards = fowards.reset_index()\n",
-    "fowards = fowards[fowards.points != float('-inf')]\n",
-    "fowards.head()"
+    "forwards = pd.DataFrame(chooseplayers(df=predictions,position='FWD'),columns=['price','points','players'])\n",
+    "forwards = forwards.groupby(by='points').min()\n",
+    "forwards = forwards.reset_index()\n",
+    "forwards = forwards[forwards.points != float('-inf')]\n",
+    "forwards.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final 0-1 Knapsack for choosing optimal budget for each player type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memo = dict() ##\n",
+    "def finalknapsack(budget,points_grid,prices_grid):\n",
+    "    if budget == 0:\n",
+    "        return 0\n",
+    "    if len(prices_grid) == 1:\n",
+    "        max_ = (price,)\n",
+    "        for i in range(len(prices_grid[0])):\n",
+    "            if prices_grid[0][i] <= budget:\n",
+    "                \n",
+    "\n",
+    "\n",
+    "    if (budget,tuple(prices_grid)) in cache.keys():\n",
+    "        return memo[(budget,tuple(prices_grid))]\n",
+    "    \n",
+    "    if prices_grid[0][-1] > budget:\n",
+    "        points_grid[0].pop()\n",
+    "        prices_grid[0].pop()\n",
+    "        memo[(budget,tuple(prices_grid))] = finalknapsack(budget,points_grid,prices_grid)\n",
+    "        return memo[(budget,tuple(prices_grid))]\n",
+    "    else:\n",
+    "        a = points_grid[0][-1] + finalknapsack(budget-prices_grid[0][-1],points_grid[1:],prices_grid[1:])\n",
+    "        points_grid[0].pop()\n",
+    "        prices_grid[0].pop()\n",
+    "        b = finalknapsack(budget,points_grid,prices_grid)\n",
+    "        memo[(budget,tuple(prices_grid))] = max(a,b)\n",
+    "        return memo[(budget,tuple(prices_grid))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [[2,3,4],[5,6,7],[8,9,1]]\n",
+    "a[0].pop()\n",
+    "len(a)"
    ]
   }
  ],
