Final Team Choice Knapsack

--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -856,58 +856,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "memo = dict() ##\n",
     "def finalknapsack(budget,points_grid,prices_grid):\n",
+    "    ## Base cases\n",
     "    if budget == 0:\n",
+    "        return 0 if len(prices_grid) == 0 else float('-inf')\n",
+    "    if len(prices_grid) == 0:\n",
     "        return 0\n",
-    "    if len(prices_grid) == 1:\n",
-    "        max_ = (price,)\n",
-    "        for i in range(len(prices_grid[0])):\n",
-    "            if prices_grid[0][i] <= budget:\n",
+    "    if len(prices_grid[0]) == 0:\n",
+    "        return float('-inf')\n",
     "                \n",
-    "\n",
-    "\n",
-    "    if (budget,tuple(prices_grid)) in cache.keys():\n",
-    "        return memo[(budget,tuple(prices_grid))]\n",
+    "    ## Retrieve solutions from the memo\n",
+    "    if (budget,len(prices_grid), len(prices_grid[0])) in memo.keys():\n",
+    "        return memo[(budget,len(prices_grid), len(prices_grid[0]))]\n",
     "    \n",
-    "    if prices_grid[0][-1] > budget:\n",
-    "        points_grid[0].pop()\n",
-    "        prices_grid[0].pop()\n",
-    "        memo[(budget,tuple(prices_grid))] = finalknapsack(budget,points_grid,prices_grid)\n",
-    "        return memo[(budget,tuple(prices_grid))]\n",
+    "    ## Repetitive sub-problem\n",
+    "    if prices_grid[0][0] > budget:\n",
+    "        points_grid[0] = points_grid[0][1:]\n",
+    "        prices_grid[0] = prices_grid[0][1:]\n",
+    "        memo[(budget,len(prices_grid), len(prices_grid[0]))] = finalknapsack(budget,points_grid,prices_grid)\n",
+    "        return memo[(budget,len(prices_grid), len(prices_grid[0]))]\n",
     "    else:\n",
-    "        a = points_grid[0][-1] + finalknapsack(budget-prices_grid[0][-1],points_grid[1:],prices_grid[1:])\n",
-    "        points_grid[0].pop()\n",
-    "        prices_grid[0].pop()\n",
+    "        a = points_grid[0][0] + finalknapsack(budget-prices_grid[0][0],points_grid[1:],prices_grid[1:])\n",
+    "        points_grid[0] = points_grid[0][1:]\n",
+    "        prices_grid[0] = prices_grid[0][1:]\n",
     "        b = finalknapsack(budget,points_grid,prices_grid)\n",
-    "        memo[(budget,tuple(prices_grid))] = max(a,b)\n",
-    "        return memo[(budget,tuple(prices_grid))]"
+    "        memo[(budget,len(prices_grid), len(prices_grid[0]))] = max(a,b)\n",
+    "        return memo[(budget,len(prices_grid), len(prices_grid[0]))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "20"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = [[2,3,4],[5,6,7],[8,9,1]]\n",
-    "a[0].pop()\n",
-    "len(a)"
+    "finalknapsack(20,a,a)"
    ]
   }
  ],
